<resources>
    <string name="app_name">NoGirl</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="action_email">Email</string>
    <string name="activity_a">Activity A</string>
    <string name="activity_b">Activity B</string>
    <string name="activity_c">Activity C</string>
    <string name="add">add</string>
    <string name="reset">reset</string>
    <string name="about">about</string>
    <string name="exit">exit</string>
</resources>
