<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.beast.chatbot.MainActivity"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">
    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="always"
        android:title="@string/action_search" />
    <item
        android:id="@+id/share"
        android:icon="@android:drawable/ic_menu_share"
        android:showAsAction="always"
        android:title="@string/action_share" />
    <item
        android:id="@+id/email"
        android:icon="@android:drawable/ic_dialog_email"
        android:showAsAction="ifRoom"
        android:title="@string/action_email" />
    <item
        android:id="@+id/activity_a"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/activity_a" />
    <item
        android:id="@+id/activity_b"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/activity_b" />
    <item
        android:id="@+id/activity_c"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/activity_c" />


</menu>